# prism

./: .gitignore  AGENTS.md  CLAUDE.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
backend/: auth.py  config.py  main.py  requirements.txt
backend/db/: schema.sql
backend/models/: __init__.py  schemas.py
backend/pipeline/: __init__.py  audio.py  color_palette.py  duplicates.py  faces.py  metadata.py  orchestrator.py  scanner.py  technical.py  visual.py
backend/routers/: __init__.py  clips.py  collections.py  dailies.py  duplicates.py  export.py  faces.py  ingest.py  luts.py  markers.py  search.py  storyboard.py  stream.py  transcript.py  watch.py
backend/services/: __init__.py  export.py  metadata_store.py  search.py  vector_store.py  ws_manager.py
backend/tests/: conftest.py  test_auth.py  test_pipeline.py  test_search.py  test_security.py
scripts/: build.sh  dev.sh  seed_demo.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AssemblyWorkspace.tsx  ClipBrowser.tsx  ClipCard.tsx  ClipDetail.tsx  ColorPalette.tsx  DailiesReport.tsx  DuplicateGroups.tsx  ExportDialog.tsx  FaceSidebar.tsx  FilterPanel.tsx  LatencyChart.tsx  LutSelector.tsx  MarkerPopover.tsx  ProgressOverlay.tsx  ScoreBar.tsx  SearchBar.tsx  SmartCollectionEditor.tsx  StoryboardCell.tsx  StoryboardView.tsx  TimelineView.tsx  TopBar.tsx  TranscriptView.tsx  ViewSwitcher.tsx  WatchFolderIndicator.tsx  WaveformDisplay.tsx
src/hooks/: useClipLibrary.ts  (+5 more)
(+4 files in other folders)
