[package]
name = "prism"
version = "0.1.0"
description = "Post-production Review & Intelligent Scene Manager"
authors = ["Dev Mody"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "prism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rand = "0.8"
hex = "0.4"
tauri = { version = "2.11.3" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
